; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_21725.c_make_scrambled_password.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_21725.c_make_scrambled_password.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"%08lx%08lx\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @make_scrambled_password(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca [2 x i32], align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @hash_password(i32* %6, i8* %7)
  %9 = load i8*, i8** %3, align 8
  %10 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  %11 = load i32, i32* %10, align 4
  %12 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @sprintf(i8* %9, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %13)
  ret void
}

declare dso_local i32 @hash_password(i32*, i8*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
